<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/account_preferences">

        <Preference
            app:key="user_profile"
            app:summary="@string/user_profile_summary"
            app:title="@string/user_profile">

            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="com.michael_zhu.myruns.ui.settings.UserProfileActivity"
                android:targetPackage="com.michael_zhu.myruns" />

        </Preference>

        <CheckBoxPreference
            app:key="privacy_setting"
            app:summary="@string/privacy_setting_summary"
            app:title="@string/privacy_setting"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/additional_settings">

        <ListPreference
            app:defaultValue="@string/metric_units_value"
            app:entries="@array/unit_labels"
            app:entryValues="@array/unit_values"
            app:key="unit_preference"
            app:summary="@string/unit_preference_summary"
            app:title="@string/unit_preference" />

        <EditTextPreference
            app:key="comments"
            app:summary="@string/comments_summary"
            app:title="@string/comments" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/misc_settings">

        <Preference
            app:key="class_homepage"
            app:summary="@string/class_homepage_summary"
            app:title="@string/class_homepage">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.sfu.ca/~xingdong/Teaching/CMPT362/web/cs65.html" />

        </Preference>

    </PreferenceCategory>

</PreferenceScreen>